--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0-alpha.15",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
@@ -22,7 +21,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^4.0.0-alpha.15",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
